changed color to see if it resolves contrast error

--- a/chamber/styles/styles.css
+++ b/chamber/styles/styles.css
@@ -138,7 +138,7 @@ main {
     border-radius: 5px;
     bottom: 1.5rem;
     right: 1.5rem;
-    color: #EFDC14;
+    color: #6A0136;
     padding: .25rem;
 }
 
